OO-3234: log exceptions where printStackTrace() method was used