@@ -146,7 +146,7 @@ public class QTI12ResultDetailsController extends BasicController {
 		main = createVelocityContainer("qtires");
 		
 		boolean hasEssay = checkEssay();
-		main.contextPut("warningEssay", new Boolean(hasEssay));
+		main.contextPut("warningEssay", Boolean.valueOf(hasEssay));
 		
 		TableGuiConfiguration tableConfig = new TableGuiConfiguration();
 		tableCtr = new TableController(tableConfig, ureq, getWindowControl(), getTranslator());
@@ -259,8 +259,8 @@ public class QTI12ResultDetailsController extends BasicController {
 		
 		//olat results
 		AssessmentContext ac = ai.getAssessmentContext();
-		Float score = new Float(ac.getScore());
-		Boolean passed = new Boolean(ac.isPassed());
+		Float score = Float.valueOf(ac.getScore());
+		Boolean passed = Boolean.valueOf(ac.isPassed());
 		ScoreEvaluation sceval = new ScoreEvaluation(score, passed, Boolean.FALSE, new Long(ai.getAssessID()));
 		UserCourseEnvironment userCourseEnv = AssessmentHelper.createAndInitUserCourseEnvironment(assessedIdentity, course);
 		testNode.updateUserScoreEvaluation(sceval, userCourseEnv, assessedIdentity, true, Role.coach);
